--- a/src/app/components/icon/icon.component.html
+++ b/src/app/components/icon/icon.component.html
@@ -1,3 +1,4 @@
-<button (click)="showRandomIcon()">Show Random Icon</button>
-
-<fa-icon [icon]="iconsSvg[x]"></fa-icon>
+<div class="container">
+    <button class="btn" (click)="showRandomIcon()">Show Random Icon</button>
+    <fa-icon [icon]="iconsSvg[x]"></fa-icon>
+</div>
